# circe

./: .pre-commit-config.yaml  BENCHMARK.md  Cargo.toml  docker-compose.yaml  events.ndjson  justfile
.zed/: settings.json
circe-cli/: Cargo.toml
circe-cli/src/: lib.rs  params.rs  writer.rs
circe-providers/: Cargo.toml
circe-providers/src/: batching.rs  convert.rs  error.rs  exec.rs  lib.rs  provider.rs  token_range.rs  utils.rs  writer.rs
circe-providers/src/providers/: mod.rs
circe-providers/src/providers/from_query/: exec.rs  mod.rs  provider.rs
circe-providers/src/providers/token_range/: exec.rs  mod.rs  provider.rs  range.rs
circe-providers/tests/: integration_test.rs
examples/: bench_setup.rs  populate_test_data.rs
src/: lib.rs  main.rs
